// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items - 2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
      "name": "Chronicles of seb",
      "price": 28.73,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "test",
  },
]
`;

exports[`can add new items 1`] = `
Object {
  "items": Array [
    Object {
      "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
      "name": "Chronicles of seb",
      "price": 28.73,
    },
    Object {
      "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
      "name": "Chronicles of seb",
      "price": 28.73,
    },
    Object {
      "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
      "name": "test",
      "price": 28.73,
    },
  ],
}
`;

exports[`can add new items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
        "name": "Chronicles of seb",
        "price": 28.73,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
        "name": "Chronicles of seb",
        "price": 28.73,
      },
      Object {
        "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
        "name": "Chronicles of seb",
        "price": 28.73,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
        "name": "Chronicles of seb",
        "price": 28.73,
      },
      Object {
        "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
        "name": "Chronicles of seb",
        "price": 28.73,
      },
      Object {
        "image": " https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL",
        "name": "test",
        "price": 28.73,
      },
    ],
  },
]
`;
